--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+dotenvy = "0.15.7"
 sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio-native-tls"] }
 tokio = { version = "1.45.0", features = ["full"] }
